css 02 shaded progress bars

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 <body>
     <h2>Animation Demos</h2>
+    <h3>CSS animation</h3>
     <ul>
-        <li><a href="css/01_marquee.html" target="_blank">CSS-only Marquee Menu Effect</a></li>
+        <li><a href="css/01_marquee.html" target="_blank">Marquee Menu Effect</a></li>
+        <li><a href="css/02_shaded_progress_bars.html" target="_blank">Shaded Progress Bars</a></li>
+    </ul>
+    <h3>SVG animation</h3>
+    <ul>
+        <li><a href="svg/01_border_animation.html" target="_blank">Border Animation</a></li>
     </ul>
 </body>
 </html>
