svg 02 path animation
냠척 페이지에서 보이길래 따라해봄..
* 단점 : 반응형 안됨

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h3>SVG animation</h3>
     <ul>
         <li><a href="svg/01_border_animation.html" target="_blank">Border Animation</a></li>
+        <li><a href="svg/02_path_animation_yummy.html" target="_blank">Path Animation - yummygenie^-^</a></li>
     </ul>
 </body>
 </html>
